objects/Case11533_2__c.object
<CustomObject>
    <fields>
        <fullName>Fieldcommit1__c</fullName>
        <label>Fieldcommit1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldcommit2__c</fullName>
        <label>Fieldcommit2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newtest__c</fullName>
        <label>Newtest</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestPicklist__c</fullName>
        <label>TestPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X11325_Field1__c</fullName>
        <label>11325_Field1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Case11533_2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case11533_2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case11533_2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>